[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "set-figure-style"         # pip에서 보이는 패키지 이름
version = "0.1.0"
description = "Figure style helper for matplotlib"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Hyung-Gu Kang" }
]

dependencies = [
  "matplotlib",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["set_figure_style"]